syntax = "proto3";

package wosai.ultron;

option go_package = "github.com/wosai/ultron/v2/pkg/genproto";

import "statistics.proto";
import "google/protobuf/empty.proto";

service UltronService {
    rpc Subscribe(Session) returns (stream Event) {}
    rpc Submit(RequestSubmit) returns (google.protobuf.Empty) {}
}

message Session {
    string slave_id = 1;
    map<string, string> extras = 2;
}

enum EventType {
    UNKONWN = 0;
    PING = 1;
    CONNECTED = 2;  //已连接
    DISCONNECT = 3; // 要求slave断开连接
    PLAN_STARTED = 4; // 测试计划开始
    PLAN_FINISHED = 5; // 测试计划结束
    PLAN_INTERRUPTED = 6; // 测试计划中断执行
    NEXT_STAGE_STARTED = 7; // 开始执行计划中的下一阶段
    STATS_AGGREGATE = 8;  // 上报统计对象
}

message TimerDTO {
    string type = 1;
    bytes timer = 2;
}

message AttackStrategyDTO {
    string type = 1;
    bytes attack_strategy = 2;
}

message Event {
    EventType type = 1;
    oneof data {
        string plan_name = 2;
        AttackStrategyDTO attack_strategy = 3;
        TimerDTO timer = 4;
        uint32 batch_id = 5;
    };
}

message RequestSubmit {
    string slave_id = 1;
    uint32 batch_id = 2;
    StatisticianGroupDTO stats =3;
}
